src/yini_test/cases/golden/lenient/valid/comments/block-comment-inline-within-value.yini
@yini

^ Application
name = /* ignored block comment */ "lenient-block-comment-inline-within-value"
enabled = true
