src/yini_test/cases/golden/lenient/invalid/comments/block-comment-nested.yini
@yini

^ Application
name = "lenient-block-comment-nested"
/* outer /* inner */ still-outer */
